--- a/app/src/main/res/layout/donation_layout.xml
+++ b/app/src/main/res/layout/donation_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:id="@+id/d_main"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/rounded_white_bg"
     android:layout_below="@+id/fv"
@@ -28,28 +28,34 @@
         android:layout_below="@+id/text"
         android:layout_width="match_parent"
         android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:paddingRight="4dp"
+        android:orientation="horizontal"
         android:paddingLeft="4dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/f"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:orientation="vertical">
 
             <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="234"
+                android:gravity="center"
                 android:textColor="#000000"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
             <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
+                android:gravity="center"
                 android:ellipsize="end"
                 android:textSize="12sp"
                 android:text="TOTAL DONORS"/>
@@ -57,23 +63,26 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/s"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="$6,000"
+                android:gravity="center"
                 android:textColor="#000000"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
             <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
+                android:gravity="center"
                 android:ellipsize="end"
                 android:textSize="12sp"
                 android:text="RAISED"/>
@@ -81,6 +90,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/t"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -88,16 +98,18 @@
             android:orientation="vertical">
 
             <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="$20,000"
+                android:gravity="center"
                 android:textColor="#000000"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
             <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
+                android:gravity="center"
                 android:ellipsize="end"
                 android:textSize="12sp"
                 android:text="GOAL"/>
@@ -115,26 +127,54 @@
         android:indeterminate="false"
         android:paddingLeft="16dp"
         android:progressDrawable="@drawable/donate_seekbar_drawable"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/rsecond"
         android:paddingRight="16dp"
         android:progress="0"/>
 
-    <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-        android:id="@+id/txtamount"
-        android:layout_below="@+id/donation_seekbar"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/relamount"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="$0"
-        android:textColor="#DD2434"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+        android:layout_below="@+id/donation_seekbar">
+
+        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:gravity="center"
+            android:layout_alignParentLeft="true"
+            android:ellipsize="end"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:text="$0.00"/>
+
+        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
+            android:id="@+id/txtamount"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="$0"
+            android:textColor="#DD2434"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
+
+        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:gravity="center"
+            android:layout_alignParentRight="true"
+            android:ellipsize="end"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:text="$20,000"/>
+
+    </RelativeLayout>
 
     <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
         android:id="@+id/donate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtamount"
+        android:layout_below="@+id/relamount"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp"
         android:paddingLeft="20dp"
