--- a/app/src/main/res/layout/fragment_offer_request_help.xml
+++ b/app/src/main/res/layout/fragment_offer_request_help.xml
@@ -15,7 +15,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:background="#d7d7d7"
+            android:background="@color/colorBackground"
             android:layout_height="match_parent"
             android:descendantFocusability="blocksDescendants">
 
@@ -77,7 +77,7 @@
                         android:layout_weight="1"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:drawableRight="@drawable/drop_down_small"
+                        android:drawableRight="@drawable/drop_down_black_small"
                         android:text="Sort"
                         android:layout_marginRight="4dp"
                         android:layout_gravity="center_vertical"
@@ -89,12 +89,35 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rc_posts"
+                android:id="@+id/rc_help_posts"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/header">
+                android:layout_below="@+id/header"
+                android:layout_above="@+id/see_map">
 
             </androidx.recyclerview.widget.RecyclerView>
+
+            <LinearLayout
+                android:id="@+id/see_map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_margin="12dp"
+                android:padding="7dp"
+                android:background="@drawable/rounded_green_bg"
+                android:layout_gravity="center">
+
+                <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ffffff"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    android:text="SEND FEEDBACK "/>
+
+            </LinearLayout>
+
 
         </RelativeLayout>
 
